--- a/css/stylesContacto.css
+++ b/css/stylesContacto.css
@@ -1,4 +1,4 @@
-/* Solo se comento el css el index; se trato con la misma logica a contacto y productos */
+/* Solo se comento el css del index; se trato con la misma logica a contacto y productos */
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
